--- a/sample_app_V2/Gemfile
+++ b/sample_app_V2/Gemfile
@@ -1,6 +1,7 @@
 source 'https://rubygems.org'
 
 gem 'rails',        '5.0.1'
+gem 'bcrypt'
 gem 'bootstrap-sass'
 gem 'puma',         '3.4.0'
 gem 'sass-rails',   '5.0.6'
