--- a/sample_app_V2/Gemfile
+++ b/sample_app_V2/Gemfile
@@ -1,7 +1,12 @@
 source 'https://rubygems.org'
 
 gem 'rails',        '5.0.1'
-gem 'bcrypt'
+gem 'bcrypt'      #encrypts
+gem 'faker'       #for fake names
+gem 'will_paginate',           '3.1.0'   # multiple page navigator
+gem 'bootstrap-will_paginate', '0.0.10'   #makes paginate compatible with bootstraps
+
+
 gem 'bootstrap-sass'
 gem 'puma',         '3.4.0'
 gem 'sass-rails',   '5.0.6'
@@ -13,7 +18,7 @@ gem 'jbuilder',     '2.4.1'
 
 group :development, :test do
   gem 'sqlite3', '1.3.12'
-  gem 'byebug',  '9.0.0', platform: :mri
+  gem 'byebug',  '9.0.0', platform: :mri    #debugger
 end
 
 group :development do
