--- a/odin-flight-booker/test/fixtures/flights.yml
+++ b/odin-flight-booker/test/fixtures/flights.yml
@@ -1,10 +1,19 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
+
+one:
+  id: 1
+  departed_from_id: 1
+  arriving_to_id: 2
+  departure_date_time: <%= Time.zone.now + 2.hours %>
+  arrival_date_time: <%= Time.zone.now + 5.hours %>
+
 <% 3.times do |num|%>
 flight_one_<%=num%>:
   departed_from_id: 1
   arriving_to_id: 2
   departure_date_time: <%= Time.zone.now + 2.hours %>
+  arrival_date_time: <%= Time.zone.now + 5.hours %>
 <%end%>
 
 
